<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/lightgray" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.p003v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="5dp">
        <LinearLayout android:orientation="horizontal" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.5dp" android:src="@drawable/back_black"/>
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_weight="1">
                <TextView android:textSize="15sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mon_dec_26_11_20_am" android:fontFamily="@font/sfpro_display_semibold" android:letterSpacing="0.0525"/>
                <TextView android:textSize="15sp" android:textColor="@color/skyblue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_81313212" android:fontFamily="@font/sfpro_display_semibold" android:letterSpacing="0.0525"/>
            </LinearLayout>
            <TextView android:textSize="15sp" android:textColor="@color/silver" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:text="@string/help" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
        </LinearLayout>
    </android.support.p003v7.widget.CardView>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="16.7dp" android:paddingBottom="16.7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <TextView android:textSize="16sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bill_detail" android:fontFamily="@font/sfpro_display_semibold" android:letterSpacing="0.0525"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp">
                    <TextView android:textSize="15sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/base_fare" android:fontFamily="@font/sfpro_display_light" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="15sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/_2_km_0_5_min" android:fontFamily="@font/sfpro_display_light" android:letterSpacing="0.0525"/>
                </LinearLayout>
                <View android:background="@color/viewline" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="16.7dp"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.8dp">
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/ride_kms" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/_5_km" android:layout_weight="1" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_10" android:fontFamily="@font/sfpro_display_regular"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.8dp">
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ride_time" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/_20_min" android:layout_weight="1" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_3" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                </LinearLayout>
                <View android:background="@color/viewline" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="16.7dp"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.8dp">
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Paid" android:fontFamily="@font/sfpro_display_bold" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="15sp" android:textColor="@color/silver" android:layout_gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/by_paypal" android:layout_weight="1" android:fontFamily="@font/sfpro_display_light" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_13" android:fontFamily="@font/sfpro_display_bold" android:letterSpacing="0.0525"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingTop="16.8dp" android:paddingBottom="16.7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.7dp">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:textSize="13sp" android:textColor="@color/silver" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/distance" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5 kms" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                </LinearLayout>
                <View android:background="@color/viewline" android:layout_width="1dp" android:layout_height="match_parent"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:textSize="13sp" android:textColor="@color/silver" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wait_time" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20 min" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                </LinearLayout>
                <View android:background="@color/viewline" android:layout_width="1dp" android:layout_height="match_parent"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:textSize="13sp" android:textColor="@color/silver" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_13" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingLeft="16.7dp" android:paddingTop="9dp" android:paddingBottom="9dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.7dp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/activa_img"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.7dp">
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gj_06_1421" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="13sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/honda_activa" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/_5_km_0_5_mincomatxt" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                    <TextView android:textSize="13sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7dp" android:text="One way trip" android:fontFamily="@font/sfpro_display_regular" android:letterSpacing="0.0525"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.7dp">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:src="@drawable/circle_red"/>
                    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/dotted_linegray" android:layout_width="1dp" android:layout_height="80dp" android:layerType="software"/>
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/circle_green"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp">
                        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                            <TextView android:textSize="15sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/pickup_point" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                            <TextView android:textSize="14sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/_11_sihvam_flat_near_vrajdham_temple_nmanjalpur_vadodara" android:lineSpacingExtra="2dp" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                        </LinearLayout>
                        <TextView android:textSize="14sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="16.7dp" android:text="@string/_11_00_am" android:lineSpacingExtra="5dp" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="16.8dp">
                        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="17sp" android:textColor="@color/black" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/drop_point" android:layout_weight="1" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                            <TextView android:textSize="14sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.7dp" android:text="@string/_11_20_amtxt" android:lineSpacingExtra="5dp" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                        </LinearLayout>
                        <TextView android:textSize="14sp" android:textColor="@color/silver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/s_02_indiabulls_mega_mall_nr_dinesh_mill_njetalpur_roda_vadodara" android:lineSpacingExtra="2dp" android:fontFamily="@font/sfpro_display_medium" android:letterSpacing="0.0525"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
