<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OffersFragment">


        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingLeft="16.299988dip"
                    android:paddingTop="16.699982dip"
                    android:paddingBottom="16.699982dip"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                        <TextView
                            android:textSize="18.299988sp"
                            android:textColor="@color/black"
                            android:id="@+id/discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_25_off"
                            android:fontFamily="@font/sfpro_display_semibold"
                            android:letterSpacing="0.0525" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip">

                                <TextView
                                    android:textSize="14.0sp"
                                    android:textColor="@color/silver"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/get_20_off_on_your_1st_ride"
                                    android:fontFamily="@font/sfpro_display_regular"
                                    android:letterSpacing="0.0525" />

                                <TextView
                                    android:textSize="14.0sp"
                                    android:textColor="@color/silver"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5.0dip"
                                    android:text="@string/know_more"
                                    android:fontFamily="@font/sfpro_display_regular"
                                    android:letterSpacing="0.0525" />

                        </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14.0dip"
                    app:cardCornerRadius="3.0dip"
                    app:cardElevation="5.0dip">

                        <LinearLayout
                            android:orientation="vertical"
                            android:background="@drawable/btn_plain"
                            android:paddingLeft="25.0dip"
                            android:paddingTop="7.0dip"
                            android:paddingRight="25.0dip"
                            android:paddingBottom="7.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                                <TextView android:textSize="16.0sp"
                                    android:textColor="@color/white"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/use"
                                    android:fontFamily="@font/sfpro_display_regular"
                                    android:letterSpacing="0.0525" />

                        </LinearLayout>
                </android.support.v7.widget.CardView>
        </LinearLayout>

</FrameLayout>